--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
-/target
+# ---- Rust / Cargo ----
+target/
+**/*.rs.bk
+
+# ---- Build artifacts ----
+*.exe
+*.out
+*.o
+*.so
+*.dylib
+*.dll
+*.a
+
+# ---- IDE / Editor files ----
+# VS Code
+.vscode/
+*.code-workspace
+
+# JetBrains (CLion, IntelliJ, RustRover)
+.idea/
+
+# Sublime / Others
+*.sublime-workspace
+*.sublime-project
+
+# ---- OS-specific junk ----
+.DS_Store
+Thumbs.db
+
+# ---- Env / Config ----
+.env
+.env.*
